@@ -12,6 +12,7 @@ Changelog for 1.4.4
 * Fixed bug 1235, natural persons' orders not on report (Chris T)
 * Fixed bug, insufficient perms on account_checkpoint_id_seq (Chris T)
 * Fixed bug 1238, web services do not run on starman (Chris T)
+* Fixed bug 1233, insufficient error handling with templates (Chris T)
 
 Chris T is Chris Travers
 
